simple ui fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ show_reading_time: false
 </div>
 
 <div class="container">
-  <h1>Choose you Journey</h1>
+  <h1>Choose Your Journey</h1>
 
   <section id="debate-selection">
     <button
@@ -288,7 +288,7 @@ show_reading_time: false
 </style>
 
 <div id="bubble-container"></div>
-;
+
 
 <script>
   var pythonURI;
