--- a/navigation/authentication/profile.html
+++ b/navigation/authentication/profile.html
@@ -114,7 +114,7 @@ show_reading_time: false
 
         <div>
             <label for="themeColor">Choose a Different Theme:</label>
-            <input type="color" id="themeColor" style="width: 40px; height: 30px; padding: 2px;" onchange="updateTheme()">
+            <input type="color" id="themeColor" style="width: 40px; height: 30px; padding: 2px;" onchange="updateUserThemeColor()">
         </div>
         
         
